--- a/css/style.css
+++ b/css/style.css
@@ -720,3 +720,117 @@ margin-bottom: 26px;
 .galery-div-join{
   margin-bottom: 240px;
 }
+
+.logo-background{
+  width: 38px;
+  height: 38px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #FF6E30;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-logo-img{
+  width: 19.377px;
+  height: 20.949px;
+  flex-shrink: 0;
+}
+
+.logo-footer{
+  display: flex;
+  gap: 12px;
+  margin-top: 70px;
+}
+
+.line{
+  width: auto;
+  height: 0.5px;
+  background: rgba(255, 255, 255, 0.15);
+}
+
+.footer-title-logo{
+  color: rgba(255, 255, 255, 0.90);
+  font-family: Poppins;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.galery-title-h3-footer{
+  color: rgba(255, 255, 255, 0.55);
+font-family: Poppins;
+font-size: 14px;
+font-weight: 400;
+line-height: 25px; /* 178.571% */
+margin-bottom: 98px;
+}
+.galery-title-h2-footer
+{
+  color: rgba(255, 255, 255, 0.90);
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  margin-top:25px;
+  margin-bottom:22px;
+}
+
+.galery-title-h4-footer{
+  color: rgba(255, 255, 255, 0.90);
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.footer-collumn-contact{
+  margin-left: 156px;
+  margin-top: 70px;
+  gap:10px;
+}
+
+.footer-links-contact{
+  gap: 10px;
+  display:flex;
+  flex-wrap: wrap;
+  width: 197px;
+  margin-top: 20px;
+}
+
+.footer{
+  display: flex;
+}
+
+.footer-link{
+  color: rgba(255, 255, 255, 0.55);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+
+.footer-links-сategories{
+  gap: 10px;
+  display:flex;
+  flex-wrap: wrap;
+  width: 109px;
+  margin-top: 20px;
+}
+.footer-collumn-info,
+.footer-collumn-сategories{
+  margin-left: 115px;
+  margin-top: 70px;
+}
+
+.footer-links-info{
+  gap: 10px;
+  display:flex;
+  flex-wrap: wrap;
+  width: 101px;
+  margin-top: 20px;
+}
+
+.footer-collumn-info{
+  margin-left: 118px;
+  margin-top: 70px;
+}
